# mod_auth_openidc

./: .clang-format  .clang-tidy  .cproject  .dockerignore  .gitignore  .gitmodules  .project  .travis.yml  AUTHORS  AddSubModules.cmd  ChangeLog  DISCLAIMER  Dockerfile  Dockerfile-alpine  INSTALL  Makefile.am  Makefile.in  README  README.md  SECURITY.md  _Dematic_README.md  _pull-upstream.cmd  auth_openidc.conf  autogen.sh  bootstrap-windows.cmd  build.cmd  clean.cmd  configure.ac  deploy_to_artifactory.cmd  docker-compose.yml  download.ps1  libapache2-mod-auth-openidc.conf  mod_auth_openidc.sln  mod_auth_openidc.vcxproj  mod_auth_openidc.vcxproj.filters  oauth2.conf  openidc.conf  sonar-project.properties  stdafx.h
src/: .gitignore  Makefile.am  apr_json_decode.c  authz.c  config.c  const.h  crypto.c  http.c  http.h  http_int.h  jose.c  jose.h  json.c  json.h  metadata.c  metadata.h  metrics.c  metrics.h  mod_auth_openidc.c  mod_auth_openidc.h  mod_oauth2.c  mod_oauth2.h  oauth.c  oauth.h  parse.c  parse.h  pcre_subst.c  pcre_subst.h  proto.c  proto.h  session.c  session.h  state.c  state.h  util.c  util.h
src/cache/: .gitignore  cache.h  common.c  file.c  lock.c  memcache.c  memcache.h  redis.c  redis.h  shm.c
src/cfg/: .gitignore  cache.c  cache.h  cfg.c  cfg.h  cfg_int.h  cmds.c  dir.c  dir.h  directives.h  oauth.c  oauth.h  parse.c  parse.h  provider.c  provider.h
src/handle/: .gitignore  authz.c  content.c  discovery.c  dpop.c  fedcm.c  handle.h  info.c  jwks.c  logout.c  refresh.c  request.c  request_uri.c  response.c  revoke.c  session_management.c  userinfo.c
src/jose/: aes_wrap.c  apr_jose.h  apr_jwe.c  apr_jwk.c  apr_jws.c  apr_jwt.c  internal.h  jwe.c  jwk.c  jws.c
src/json/: apr_json.h  apr_json_decode.c
src/metadata/: .gitignore  client.c  conf.c  internal.h  jwks.c  oauth.c  provider.c  util.c
src/proto/: .gitignore  auth.c  discovery.c  dpop.c  id_token.c  jwks.c  jwt.c  pkce.c  profile.c  proto.c  proto.h  request.c  request_object.c  response.c  state.c  token.c  userinfo.c
src/util/: .gitignore  appinfo.c  base64.c  cache_local.c  cache_local.h  expr.c  file.c  html.c  jq.c  json.c  jwt.c  key.c  pcre_subst.c  pcre_subst.h  random.c  url.c  util.c  util.h
test/: .gitignore  Dockerfile  Dockerfile-arch-linux  Dockerfile-centos-7  Dockerfile-rocky-linux-8  Dockerfile-rocky-linux-9  Dockerfile-ubuntu-focal  Dockerfile-ubuntu-jammy  Makefile  Makefile.am  certificate.pem  check_auth_openidc.c  check_auth_openidc.h  check_directives.sh  check_registration.sh  check_util.c  check_util.h  docker-compose-mac.yml  docker-compose.yml  eccert.pem  ecpriv.key  helper.c  helper.h  hosts.txt  http_server.c  http_server.h  jmeter.sh  keycloak.sh  mod_auth_openidc.jmx  oidc-rp-certification.sh  oidc-suite.sh  open-redirect-payload-list.txt  openidc.conf  post_preserve.template  post_restore.template  private.pem  public.pem  stub.c  test-cmd.c  test.c  (+17 more)
test/fuzz/: README.md  build.sh  fuzz.h  fuzz_base64.c  fuzz_json.c  fuzz_jwt.c  fuzz_url.c  run-fuzzers.sh  standalone.c
test/metadata/: links.sh
test/metadata/code+id_token/: rp-claims-distributed.conf  rp-id_token-sig%2Benc-a128kw.conf  rp-id_token-sig%2Benc.conf  rp-key-rotation-op-enc-key.conf  rp-request_uri-enc.conf  rp-request_uri-sig%2Benc.conf  rp-request_uri-sig.conf  rp-request_uri-unsigned.conf  rp-response_mode-form_post.conf  rp-scope-userinfo-claims.conf  rp-token_endpoint-client_secret_basic.conf  rp-token_endpoint-client_secret_jwt.conf  rp-token_endpoint-client_secret_post.conf  rp-userinfo-bearer-body.conf  (+27 more)
test/metadata/code+id_token+token/: .gitignore  rp-id_token-bad-sig-es256.conf  rp-id_token-sig%2Benc-a128kw.conf  rp-id_token-sig%2Benc.conf  rp-key-rotation-op-enc-key.conf  rp-request_uri-enc.conf  rp-request_uri-sig%2Benc.conf  rp-request_uri-sig.conf  rp-request_uri-unsigned.conf  rp-response_mode-form_post.conf  rp-scope-userinfo-claims.conf  rp-token_endpoint-client_secret_basic.conf  rp-token_endpoint-client_secret_jwt.conf  rp-token_endpoint-client_secret_post.conf  rp-token_endpoint-private_key_jwt.conf  rp-userinfo-bearer-body.conf  rp-userinfo-enc.conf  rp-userinfo-sig%2Benc.conf  rp-userinfo-sig.conf  rp.certification.openid.net%3A8080%2Fmod_auth_openidc%2Frp-id_token-missing-c_hash.conf  rp.certification.openid.net%3A8080%2Fmod_auth_openidc-code%2Bid_token%2Btoken%2Frp-discovery-webfinger-unknown-member.conf  rp.certification.openid.net%3A8080%2Fmod_auth_openidc-code%2Bid_token%2Btoken%2Frp-id_token-missing-at_hash.conf  rp.certification.openid.net%3A8080%2Fmod_auth_openidc-code%2Bid_token%2Btoken%2Frp-id_token-sig%2Benc-a128kw.conf  rp.certification.openid.net%3A8080%2Fmod_auth_openidc-code%2Bid_token%2Btoken%2Frp-userinfo-sig%2Benc.conf  rp_test%3A8080%2Fmod_auth_openidc%2Frp-id_token-iat.conf  rp_test%3A8080%2Fmod_auth_openidc%2Frp-response_mode-form_post.conf  rp_test%3A8080%2Fmod_auth_openidc%2Frp.certification.openid.net%3A8080%2Fmod_auth_openidc%2Frp-discovery-issuer-not-matching-config.conf  rp_test%3A8080%2Fmod_auth_openidc%2Frp.certification.openid.net%3A8080%2Fmod_auth_openidc%2Frp-discovery-jwks_uri-keys.conf  rp_test%3A8080%2Fmod_auth_openidc%2Frp.certification.openid.net%3A8080%2Fmod_auth_openidc%2Frp-id_token-bad-sig-rs256.conf  rp_test%3A8080%2Fmod_auth_openidc%2Frp.certification.openid.net%3A8080%2Fmod_auth_openidc%2Frp-id_token-missing-at_hash.conf  rp_test%3A8080%2Fmod_auth_openidc%2Frp.certification.openid.net%3A8080%2Fmod_auth_openidc%2Frp-response_mode-form_post.conf  rp_test%3A8080%2Fmod_auth_openidc%2Frp.certification.openid.net%3A8080%2Fmod_auth_openidc%2Frp-response_type-code%2Bid_token%2Btoken.conf  rp_test%3A8080%2Fmod_auth_openidc%2Frp.certification.openid.net%3A8080%2Fmod_auth_openidc%2Frp-token_endpoint-client_secret_post.conf  rp_test%3A8080%2Fmod_auth_openidc%2Frp.certification.openid.net%3A8080%2Fmod_auth_openidc%2Frp-userinfo-bearer-body.conf  rp_test%3A8080%2Fmod_auth_openidc-code%2Bid_token%2Btoken%2Frp-id_token-bad-sig-es256.conf  rp_test%3A8080%2Fmod_auth_openidc-code%2Bid_token%2Btoken%2Frp-response_type-code%2Bid_token%2Btoken.conf
(+203 files in other folders)
